--- a/base/symbols/symbols.Deployment.yaml
+++ b/base/symbols/symbols.Deployment.yaml
@@ -60,11 +60,11 @@ spec:
           name: debug
         resources:
           limits:
+            cpu: "4"
+            memory: 4G
+          requests:
             cpu: "2"
             memory: 2G
-          requests:
-            cpu: 500m
-            memory: 500M
         volumeMounts:
         - mountPath: /mnt/cache
           name: cache-ssd
