--- a/base/frontend/sourcegraph-frontend.Ingress.yaml
+++ b/base/frontend/sourcegraph-frontend.Ingress.yaml
@@ -3,11 +3,11 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    # We can upload large files (extensions)
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: 150m
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/whitelist-source-range: 87.104.0.19/32,62.116.219.97/32,80.63.18.247/32,212.36.36.44/30,180.167.9.80/28,194.105.144.112/29,207.254.68.0/29,62.116.219.96/27,79.142.247.176/29,195.14.164.84/30,89.255.246.16/28,195.110.90.0/29,111.202.203.80/28,185.14.147.172/30,82.69.141.174/32,35.227.129.128/30,35.227.129.132/30,35.227.129.136/30,35.227.129.140/30,35.234.176.128/30,35.234.176.132/30,35.234.176.136/30,35.234.176.140/30,35.205.0.0/30,35.205.0.4/30,35.205.0.8/30,35.205.0.12/30,35.235.16.0/30,35.235.16.4/30,35.235.16.8/30,35.235.16.12/30,35.192.193.0/29,35.192.193.8/29,35.192.193.16/29,35.192.193.24/29,101.110.47.48/29,164.52.232.128/28,80.169.179.232/29,71.41.248.32/29,4.16.173.108/30,50.251.231.24/29,50.199.237.89/32,190.147.74.0/24,186.0.52.16/29,104.2.147.136/29,103.206.188.188/32,213.78.120.215/32,24.87.96.0/23,79.142.116.52/30,208.83.0.11/32,208.83.0.12/32,212.187.165.150/32,34.78.254.125/32,34.83.37.203/32,35.205.94.244/32,4.14.109.2/32,4.14.109.4/32,212.187.142.66/32,111.223.124.243/32,62.23.82.131/32,62.23.82.130/32,221.149.79.169/32,221.149.79.170/32,180.169.234.67/32,161.12.40.153/32,213.197.141.157/32,221.149.79.173/32,38.88.77.250/32,76.191.126.194/32,4.53.147.106/32,107.161.10.21/32,76.191.126.197/32,185.11.209.164/32,213.197.141.155/32,180.169.234.68/32,70.118.49.236/32,217.138.62.235/32,206.142.227.167/32,92.62.204.54/32,80.80.14.217/32,84.16.161.106/32,80.80.14.217/32,185.11.209.162/32,66.90.175.93/32,84.14.178.198/32,193.117.247.158/32,193.118.233.129/32,217.111.142.154/32,4.15.70.218/32,212.71.16.234/32,217.138.62.234/32,107.161.10.20/32,111.223.124.245/32,206.142.227.164/32,193.117.175.106/32,193.117.140.90/32,219.59.51.250/32,4.35.241.26/32
     nginx.ingress.kubernetes.io/proxy-body-size: "150m"
-    # See
-    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
-    # for more nginx annotations.
   labels:
     app: sourcegraph-frontend
     deploy: sourcegraph
@@ -15,19 +15,11 @@ metadata:
     app.kubernetes.io/component: frontend
   name: sourcegraph-frontend
 spec:
-  # See the customization guide (../../../docs/configure.md) for information
-  # about configuring TLS
-  # tls:
-  # - hosts:
-  #   - sourcegraph.example.com
-  #   secretName: sourcegraph-tls
   rules:
-  - http:
+  - host: sourcegraph.ds.unity3d.com
+    http:
       paths:
-      - path: /
-        backend:
+      - backend:
           serviceName: sourcegraph-frontend
           servicePort: 30080
-    # If you're using TLS/SSL, uncomment the following line and replace 'sourcegraph.example.com' with the real
-    # domain that you want to use for your Sourcegraph instance.
-    # host: sourcegraph.example.com
+        path: /
